--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Daily Sacred Verse</title>
 
-  <link rel="icon" href="img/favicon.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Serif+Pro:400,600"
-        rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.png" type="image/png" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Serif+Pro:400,600"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body class="light-mode">
@@ -20,10 +22,16 @@
         <h2 id="quote-author"></h2>
       </div>
     </div>
-    <a href="#scroll-content-start" id="scroll-down-arrow" class="scroll-down-arrow"
-       aria-label="Scroll down"><img src="img/downArrow-01.png" alt=""></a>
+    <a
+      href="#scroll-content-start"
+      id="scroll-down-arrow"
+      class="scroll-down-arrow"
+      aria-label="Scroll down"
+      ><img src="img/downArrow-01.png" alt=""
+    /></a>
   </main>
 
+  <!--  SCROLLABLE SECTION  -->
   <div id="scroll-content-start" class="scrollable-content">
     <!-- CITATION -->
     <div class="panel-citation">
@@ -32,11 +40,16 @@
       </div>
     </div>
 
-    <!-- BADÍʿ DATE PANEL (replaces former Today-button panel) -->
+    <!-- BADÍʿ DATE  -->
     <div class="panel-buttons panel-date">
       <div class="panel-content-constrained date-layout-centered">
-        <h1 id="badiDate" class="badi-date-title clickable-date"
-            title="Show / hide Gregorian date">Loading Badíʿ Date…</h1>
+        <h1
+          id="badiDate"
+          class="badi-date-title clickable-date"
+          title="Show / hide Gregorian date"
+        >
+          Loading Badíʿ Date…
+        </h1>
 
         <p id="gregorianDatePanel" class="date-text"></p>
 
@@ -48,7 +61,7 @@
       </div>
     </div>
 
-    <!-- YESTERDAY BUTTON PANEL -->
+    <!-- YESTERDAY BUTTON -->
     <div class="panel-buttons panel-buttons-yesterday">
       <div class="panel-content-constrained buttons-layout-centered">
         <a href="#" id="yesterday-button" class="button">Yesterday</a>
@@ -58,17 +71,38 @@
     <footer><div class="panel-content-constrained"></div></footer>
   </div>
 
-  <!-- YESTERDAY JUMBOTRON -->
-  <section class="quote-jumbotron" id="yesterday-jumbotron-display" style="display:none;">
+  <!--  YESTERDAY JUMBOTRON  -->
+  <section
+    class="quote-jumbotron"
+    id="yesterday-jumbotron-display"
+    style="display: none"
+  >
     <div class="quote-content-wrapper">
-      <h1 id="quote-text-yesterday" title="Click to copy quote">Loading Sacred Verse…</h1>
+      <h1 id="quote-text-yesterday" title="Click to copy quote">
+        Loading Sacred Verse…
+      </h1>
       <div class="attribution-line">
         <h2 id="quote-author-yesterday"></h2>
       </div>
+
+      <!-- ARROW THAT TOGGLES CITATION -->
+      <a
+        href="#"
+        id="yesterday-arrow"
+        class="toggle-citation-arrow"
+        aria-label="Show citation"
+        ><img src="img/downArrow-01.png" alt=""
+      /></a>
+
+      <!-- HIDDEN CITATION -->
+      <p id="quote-source-full-yesterday" class="yesterday-citation"></p>
     </div>
   </section>
 
-  <script src="https://wondrous-badi.today/scripts/BadiDateToday.v1.js" defer></script>
+  <script
+    src="https://wondrous-badi.today/scripts/BadiDateToday.v1.js"
+    defer
+  ></script>
   <script src="js/badi-init.js" defer></script>
   <script src="js/script.js" defer></script>
 </body>
